# -biohackathon-2022-project-24

./: .gitignore  README.md  README_Analysis.md  duckdb_sqlite_installation.py  mn5_activate_env.sh  pyproject.toml  requirements_311.txt  requirements_311_updated.txt
analysis/: candidate_sentences_full_extended.csv  plots.R
article/: paper.md
config/: config.yaml  deepspeed.json  llama_3_70b_fsdp_qlora.yaml  meta_llama3_7b.yaml  meta_llama3_7b_lora_4bits.yaml  mistral_lora.yaml  mistral_lora_4bits.yaml  mixtral22b_lora_4bits.yaml  mixtral8b.yaml  mixtral8b_lora_4bits.yaml  mongodb_credentials.yaml
db_utils/: db_utils.py
europepmc_api/: OTAR_new_pipeline_section_tagger.py  dataAvailability_sectionAnalysis.py  journal_list_API_response.txt  json_filtering.py  use_api.py
llm_inference/: README.md  biohack.ipynb  biohack_improvedPrompts.ipynb  biohack_react.ipynb  evaluator.py  llm_evaluate_models.py  llm_generate_response.py  llm_inference.py  llm_peft_training.py  llm_print_cuda.py  llm_sex_count_extraction.py  preprocess_dataset.py  prompt_instructions.py  run_fsdp_qlora.py  run_inference.py
marenostrum_installation/: mn_exec_script_amd.sh  mn_install_env.sh  mn_use_venv_amd_cp39.sh  mn_use_venv_cp310.sh
mn5/: README  README.md  activate_en_mn5.sh  interactive_session.sh  run_llm_inference_mn5.sh  run_training.sh  update_file_to_mn5.sh
pipeline/: README.md  add_annotation_info.py  add_metadata.py  aggregate_results.py  country_tagger.py  dl_archive_pmcid.py  dl_human_articles.py  dl_pmcids.py  dl_species_per_article.py  explore_methods.py  explore_tables.py  (+25 more)
(+72 files in other folders)
